# TaskSystem

./: .gitignore  Book1.csv  README.md
Shared/: CMakeLists.txt  TESTS.http  cart.db  main.cpp  startup.txt  task.db
Shared/headers/: .defines.hpp.un~  db.hpp  defines.hpp  part.h  task.h  user.h
Shared/public/: editor.html  help.html  home.html  index.html
